# datamole-assessment

./: .env.example  .gitignore  README.md  pyproject.toml
restfox/: .gitignore  Events.json  Kedrigern&#47;wagtail-example.json  fastapi.json  restfox.json  ruff.json  uv.json  zed.json
src/: app.py  config.py
src/database/: connection.py
src/gh/: cron.py  event.py  models.py
src/stats/: event.py
src/tests/: test_client.py  test_database.py
